fix gap

--- a/styles.css
+++ b/styles.css
@@ -776,7 +776,7 @@ a:hover {
 
 .players-video-training-2 {
   grid-area: training-2;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.2rem;
   transform: none;
 }
 
